<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_task_count_str">最少&lt;font color=#666666&gt;%1$s&lt;/font&gt;单</string>
    <string name="add_task_price_str">最低出价&lt;font color=#666666&gt;%1$s&lt;/font&gt;元</string>
    <string name="agreement">赚钱有道隐私政策协议</string>
    <string name="androidx_camera_default_config_provider" />
    <string name="app_name">赚钱</string>
    <string name="article_comment">评论：&lt;font color=#333333&gt;%1$s&lt;/font&gt;</string>
    <string name="article_look">浏览数：&lt;font color=#333333&gt;%1$s&lt;/font&gt;</string>
    <string name="bag_check_count">审核中：&lt;font color=#FF4343&gt;%1$s&lt;/font&gt; 个</string>
    <string name="bag_finish_check_count">已完成：&lt;font color=#FF4343&gt;%1$s&lt;/font&gt; 个</string>
    <string name="bag_reject_check_count">不合格：&lt;font color=#FF4343&gt;%1$s&lt;/font&gt; 个</string>
    <string name="bag_task_type">编号：%1$s | &lt;font color=#FF4343&gt;%2$s&lt;/font&gt; | %3$s</string>
    <string name="balance_str">可提现金额为%1$s元</string>
    <string name="bid_tip">1、任务赏金已托管到平台，赚钱有保障；\102、请先报名再做任务，否则无赏金；\103、需要打钱、投资的任务一律不能做，否则后果自负；</string>
    <string name="black_punishment_str">拉黑惩罚：&lt;font color=#333333&gt;%1$s&lt;/font&gt;</string>
    <string name="black_reason_str">拉黑原因：&lt;font color=#333333&gt;%1$s&lt;/font&gt;</string>
    <string name="black_time_str">拉黑时间：&lt;font color=#333333&gt;%1$s&lt;/font&gt;</string>
    <string name="black_time_tip">屏蔽时间：&lt;font color=#333333&gt;%1$s&lt;/font&gt;</string>
    <string name="black_tip">您的账号[ %1$s]由于【%2$s】已被平台封号，有问题联系客服:</string>
    <string name="brvah_app_name">Library</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="buy_recommend_tip">2.一次性购买5小时以上推荐，可抵扣&lt;font color=#FF4343&gt;0.5元代金券&lt;/font&gt;</string>
    <string name="buy_top_tip">2.一次性购买5小时以上置顶，可抵扣&lt;font color=#FF4343&gt;1元代金券&lt;/font&gt;</string>
    <string name="cancel_dialog_content">确认要取消该任务吗？</string>
    <string name="card_reward_amount">人均瓜分 &lt;font color=#4B90FF&gt;%1$s&lt;/font&gt;元</string>
    <string name="card_reward_tip">恭喜您，昨日打卡瓜分&lt;font color=#4B90FF&gt;%1$s&lt;/font&gt;元</string>
    <string name="charge_deposit_line_1">保证金最低为1000元，低于1000元任务列表不会展示保证金标识，如因违规被扣除部分或全部保证金，您需要及时充值保证金至1000元及以上，相应保证金标识才会展示，保证金无上限限制，提高保证金可以提高任务的信誉度，便于快速达成任务目标，请根据需要自行调整保证金数额；</string>
    <string name="charge_deposit_line_2">部分金融、理财、支付类任务，必须缴纳保证金后才能发布；</string>
    <string name="charge_deposit_line_3">保证金可申请退还，退还申请需要15天的审核周期，审核通过后及时退还全额保证金，退还时会收取1%的手续费，只有当保证金相关任务全部下架后才能申请保证金退还；</string>
    <string name="charge_deposit_line_4">充值保证金前请仔细阅读保证金服务协议，并确保能够遵守本协议，如有异议请勿充值，一旦充值即表明您已同意并愿意遵守保证金服务协议。</string>
    <string name="charge_deposit_str">同意&lt;font color=#FF4343&gt;《保证金服务协议》&lt;/font&gt;</string>
    <string name="charge_money_tip">平台禁止恶意充值，否则提现时收取20%手续费，解释权归平台所有；</string>
    <string name="charge_tip_line_1">通过信用卡、花呗充值余额不支持提现，其他充值可提现，请确认后充值；</string>
    <string name="charge_tip_line_2">充值无最低额度限制，请根据发布任务的单价和数量确定充值金额，账户余额可提现，但会收取一定的手续费，详情请参阅任务&lt;font color=#FC4549&gt;【发布规则】&lt;/font&gt;和&lt;font color=#FC4549&gt;【用户协议】&lt;/font&gt;；</string>
    <string name="charge_tip_line_3" formatted="false">充值提现手续费说明：非会员收5%，会员收2%；</string>
    <string name="chat_tip_other">您好，客服一直在，有事请直接留言说明情况，看到后会立刻回复并处理</string>
    <string name="clean_data_tip">清空历史做单记录后，以前做过单的可再次做单，该&lt;font color=#FF4343&gt;操作不可逆&lt;/font&gt;，请确认后再操作。</string>
    <string name="common_confirm_1">确认</string>
    <string name="common_dialog_cancel">取消</string>
    <string name="common_dialog_confirm">确定</string>
    <string name="common_dialog_hall">前往大厅</string>
    <string name="common_save">保存</string>
    <string name="company_name">Copyright © 2019 济南清悦信息科技有限公司 版权所有</string>
    <string name="company_name_2">© 济南清悦信息科技有限公司</string>
    <string name="create_task_step_tip">做单步骤&lt;font color=#FF4343&gt;（建议网址和二维码放在第一步）&lt;/font&gt;</string>
    <string name="create_task_tip">发布提示：\101、本平台禁止发布黄、赌、毒及政策等一切法律禁止内容，详细请参考《发布规则》，如有违反将查封账户,不退还账户余额，敬请周知；\102、悬赏主对自己发布的任务全权负责，禁止发布虚假、诱导性内容，如有违反后果自负</string>
    <string name="crowd_apply_real_tip">众包单通过实名认证的用户才能接单,确定去实名？</string>
    <string name="crowd_apply_tip">你需要申请为包工头，才能报名众包任务，去申请？</string>
    <string name="crowd_real_tip">众包分类是任务包批量做单的方式，设置众包基数（如5单，10单，20单等），接单人报名做单后，一次性可以提交5单，10单，20单等，适用于单量多，需要快速完成的悬赏主。\10发布众包单之后，只有认证通过的包工头才能报名接单，最大化保障做单率。\10众包分类只开放通过实名认证的悬赏</string>
    <string name="crowd_rule">做单通过率计算规则：&lt;font color=#333333&gt;做单通过数/报名单数*100%，&lt;/font&gt;每天更新一次做单通过率数据。</string>
    <string name="crowd_tip">众包分类是任务包批量做单的方式，设置众包基数（如5单，10单，20单等），接单人报名做单后，一次性可以提交5单，10单，20单等，适用于单量多，需要快速完成的悬赏主。\10发布众包单之后，只有认证通过的包工头才能报名接单，最大化保障做单率。</string>
    <string name="daily_reward_tip">今日已发放每日福利奖励 &lt;font color=#FF4343&gt;%1$s元&lt;/font&gt;</string>
    <string name="delete_dialog_content">删除后任务将无法恢复，确定要删除吗？</string>
    <string name="delete_dialog_title">确认删除任务？</string>
    <string name="device_error_tip">请先开启广告标识，再重启应用\10\10 华为手机开启方法：设置-隐私-广告-关闭限制广告跟踪\10 小米手机手机开启方法：设置-隐私保护-管理-特殊应用权限-虚拟身份管理-关闭虚拟身份保护\10 OPPO手机开启方法：设置-其他设置-设备与隐私-设备标识与广告-关闭限制广告跟踪\10 VIVO手机开启方法：设置-安全与隐私-更多安全设置-开启根据兴趣内容推荐</string>
    <string name="do_task_step_tip">做单步骤&lt;font color=#999999&gt;（请参照以下步骤完成做单）&lt;/font&gt;</string>
    <string name="errcode_cancel">分享取消</string>
    <string name="errcode_deny">分享被拒绝</string>
    <string name="errcode_unknown">分享返回</string>
    <string name="find_string">发现</string>
    <string name="game_cmp">今日已完成：%1$s/%2$s</string>
    <string name="game_title_tip">每天完成%1$s个91游戏</string>
    <string name="home">首页</string>
    <string name="ip_all_images">所有图片</string>
    <string name="ip_complete">完成</string>
    <string name="ip_folder_image_count">共%1$d张</string>
    <string name="ip_origin">原图</string>
    <string name="ip_origin_size">原图(%1$s)</string>
    <string name="ip_photo_crop">图片裁剪</string>
    <string name="ip_preview">预览</string>
    <string name="ip_preview_count">预览(%1$d)</string>
    <string name="ip_preview_image_count">%1$d/%2$d</string>
    <string name="ip_select_complete">完成(%1$d/%2$d)</string>
    <string name="ip_select_limit">最多选择%1$d张图片</string>
    <string name="know_tip">我知道了,谢谢!</string>
    <string name="login_title">登录赚钱有道</string>
    <string name="logout_title">退出登录</string>
    <string name="make_money_string">大厅</string>
    <string name="money_tip">只能&lt;font color=#FF4343&gt;涨价&lt;/font&gt;，不能&lt;font color=#FF4343&gt;降价&lt;/font&gt;，请输入涨价后的价格</string>
    <string name="my_string">我的</string>
    <string name="dynamic_string">动态</string>
    <string name="new_people_reward_tip">今日已发放新人福利奖励 &lt;font color=#FF4343&gt;%1$s元&lt;/font&gt;</string>
    <string name="open_app_host_1">open.act</string>
    <string name="open_app_scheme_1">zqyd</string>
    <string name="package_total_money">总计 &lt;font color=#262728&gt;%1$s&lt;/font&gt;元</string>
    <string name="pass_dialog_title">温馨提示</string>
    <string name="pass_dialog_title_tip">确认通过此项验证内容？</string>
    <string name="phone_tip">请输入手机号</string>
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_seconds">秒</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="picture_all_audio">所有音频</string>
    <string name="picture_audio">获取系统录音权限被拒绝</string>
    <string name="picture_audio_empty">你可以使用系统录音录制音频</string>
    <string name="picture_audio_error">音频已损坏</string>
    <string name="picture_camera">获取系统相机权限被拒绝</string>
    <string name="picture_camera_roll">相机胶卷</string>
    <string name="picture_camera_roll_num">%1$s (%2$d)</string>
    <string name="picture_cancel">取消</string>
    <string name="picture_choose_limit_seconds">只能选择 %1$ds 至 %2$ds内的视频</string>
    <string name="picture_choose_max_seconds">最大只能选择 %1$ds 以内的视频</string>
    <string name="picture_choose_min_seconds">不能选择低于 %1$ds 内的视频</string>
    <string name="picture_completed">已完成</string>
    <string name="picture_confirm">确定</string>
    <string name="picture_data_exception">获取相册数据异常...</string>
    <string name="picture_data_null">这里空空如也…</string>
    <string name="picture_done">完 成</string>
    <string name="picture_done_front_num">%1$d/%2$d 完成</string>
    <string name="picture_empty">你可以使用相机拍摄照片或视频</string>
    <string name="picture_empty_audio_title">无音频文件\10</string>
    <string name="picture_empty_title">无视频或照片\10</string>
    <string name="picture_error">图片已损坏</string>
    <string name="picture_gif_tag">动图</string>
    <string name="picture_go_setting">去设置</string>
    <string name="picture_jurisdiction">读取内存卡权限被拒绝</string>
    <string name="picture_know">我知道了</string>
    <string name="picture_long_chart">长图</string>
    <string name="picture_message_audio_max_num">你最多只能选择%1$s个音频</string>
    <string name="picture_message_max_num">你最多只能选择%1$s张照片</string>
    <string name="picture_message_video_max_num">你最多只能选择%1$s个视频</string>
    <string name="picture_min_img_num">图片最低选择不能少于%1$s张</string>
    <string name="picture_min_video_num">视频最低选择不能少于%1$s个</string>
    <string name="picture_not_crop_data">无可用裁剪数据</string>
    <string name="picture_original_image">原图</string>
    <string name="picture_pause_audio">暂停</string>
    <string name="picture_photo_camera">单击拍照，长按摄像</string>
    <string name="picture_photo_pictures">单击拍照</string>
    <string name="picture_photo_recording">长按摄像</string>
    <string name="picture_photograph">拍照</string>
    <string name="picture_play_audio">播放</string>
    <string name="picture_please">请稍候...</string>
    <string name="picture_please_select">请选择</string>
    <string name="picture_preview">预览</string>
    <string name="picture_preview_image_num">%1$d/%2$d</string>
    <string name="picture_preview_num">预览(%1$d)</string>
    <string name="picture_prompt">提示</string>
    <string name="picture_prompt_content">是否保存图片至手机？</string>
    <string name="picture_quit_audio">退出</string>
    <string name="picture_record_video">录视频</string>
</resources>